--- a/style.css
+++ b/style.css
@@ -1,130 +1,219 @@
-*,
-html {
-  padding: 0;
-  margin: 0;
-  box-sizing: border-box;
-  scroll-behavior: smooth;
+* {
+    margin: 0;
+    padding: 0;
 }
-@import url('https://fonts.googleapis.com/css2?family=Lato&family=Poppins&display=swap');
+
 body {
-  background-color: #121212;
-  font-family: 'Lato', sans-serif;
-  font-family: 'Poppins', sans-serif;
-}
-header {
-  background-color: #1F1F1F;
-  width: 100%;
-  padding: 7px;
-  height: 50px;
-  display: flex;
-  align-items: center;
-  top: 0;
-  position: sticky;
-  justify-content: space-between;
-  z-index: 2;
-}
-a {
-  color: white;
-  text-decoration: none;
-}
-span {
-  font-weight: bold;
-}
-.icon-message {
-  position: absolute;
-  display: none;
-  justify-content: center;
-  align-items: center;
-  margin: 5px;
-}
-.icon-message-flex {
-  display: flex;
-}
-.icon-message .message-card {
-  background-color: #7667febb;
-  width: 90%;
-  height: auto;
-  border-radius: 5px;
-  padding: 20px;
-  padding-top: 10px;
-  display: flex;
-  flex-direction: column;
-  gap: 5px;
-}
-.icon-message .message-card .message-card2 {
-  background-color: #1F1F1F;
-  color: white;
-  padding: 7px;
-  border-radius: 5px;
-  display: flex;
-  align-items: center;
+    background-color: #9d88d3;
+    font-family: 'Roboto', sans-serif;
+    font-size: 1.5em;
+    color: white;
+    overflow-x: hidden;
 }
 
+.preload {
+    position: absolute;
+    left: 0;
+    top: 0;
+    visibility: hidden;
+}
 
-.icon-info {
-  position: absolute;
-  display: none;
-  justify-content: center;
-  align-items: center;
-  margin: 8px;
-  right: 0;
+#content {
+    margin: 2vh auto;
+    width: 80vw;
 }
-.icon-info-flex {
-  display: flex;
+
+h1 {
+    text-align: center;
+    font-size: 3em;
+    font-weight: bold;
 }
-.icon-info .info-card {
-  background-color: #7667febb;
-  width: 100%;
-  height: auto;
-  border-radius: 5px;
-  padding: 10px;
-  padding-top: 10px;
-  display: flex;
-  flex-direction: column;
-  gap: 5px;
+
+h2 {
+    text-align: center;
+    font-weight: bold;
+    font-size: 1.5em;    
 }
-.icon-info .info-card .info-card2 {
-  width: 100%;
-  background-color: #1F1F1F;
-  color: white;
-  padding: 7px;
-  border-radius: 5px;
-  display: flex;
-  align-items: center;
+
+hr {
+    border-bottom: 6px dashed white;
+    border-top: none;
+    border-left: none;
+    border-right: none;
 }
-.container {
-  display: flex;
-  flex-direction: column;
-  margin: ;
+
+#subtitle-seperator {
+    margin-bottom: 10px;
 }
-.card {
-  background-color: #1F1F1F;
-  width: 90%;
-  padding: 10px;
-  margin: 10px;
-  margin-top: 5;
-  border-radius: 5px;
-  height: 100%;
-  display: flex;
-  justify-content: center;
-  flex-direction: column;
-  align-items: center;
+
+#counter-container {
+    text-align: center; 
+    font-weight: bold;
+    margin: 64px 0;
 }
-.card2 {
-  background-color: #121212;
-  width: 95%;
-  padding: 10px;
-  margin: 10px;
-  margin-top: 5;
-  border-radius: 5px;
-  height: 100%;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
+
+#counter-container > p {
+    text-shadow: #9d88d3 0 0 10px,#9d88d3 0 0 10px,#9d88d3 0 0 10px,#9d88d3 0 0 10px,#9d88d3 0 0 10px;
 }
-.btn {
-  background-color: #4E97FD;
-  font-size: 12px;
-  border-radius: 5px;
-  padding: 4px;
+
+#counter {
+    color: #574f84;
+    font-size: 2em;
+}
+
+#counter-button {
+    background-color: #574f84;
+    border: none;
+    border-radius: 16px;
+    color: white;
+    padding: 16px 32px;
+    text-decoration: none;
+    font-size: 1em;
+    font-family: 'Roboto', sans-serif;
+    font-weight: bold;
+    margin-top: 16px;
+}
+
+#counter-button:hover {
+    background-color: #2d2463;
+}
+
+#footer {
+    background-color: white;
+    color: black;
+    padding: 16px 10vw;
+    display: flex;    
+    gap: 16px;
+    align-items: center;
+    justify-content: center;
+}
+
+#herta-card {
+    min-width: 256px;
+    max-width: 720px;
+    height: auto;
+    border-top-left-radius: 2% 3.5%;
+    border-top-right-radius: 2% 3.5%;
+    border-bottom-left-radius: 2% 3.5%;
+    border-bottom-right-radius: 2% 3.5%;
+}
+
+.footer-icon {
+    display: inline-block;
+    vertical-align: middle;
+    font-size: 2em;    
+}
+
+#twitter-footer-icon {
+    color: #1d9bf0;
+}
+
+#github-footer-icon {
+    color: #000000;
+}
+
+.footer-icon-text {
+    display: inline-block;
+    vertical-align: middle;
+    font-weight: bold;
+    margin-left: 6px;
+}
+
+#footer-repository-text {
+    margin-top: 32px;
+    margin-bottom: 16px;
+}
+
+@media screen and (max-width: 2240px) {
+    .grid-item {
+        width: calc(20% - 10px);
+    }
+}
+
+@media screen and (max-width: 1920px) {
+    .grid-item {
+        width: calc(25% - 10px);
+    }
+}
+
+@media screen and (max-width: 1512px) {
+    body {
+        font-size: 1.25em;
+    }
+
+    #subtitle-seperator {    
+        margin-top: 3px;
+        margin-bottom: 11px;
+    }
+}
+
+@media screen and (max-width: 1280px) {
+    .grid-item {
+        width: calc(100% / 3 - 10px);
+    }
+
+    #footer {        
+        flex-wrap: wrap;
+    }
+
+    #footer-text {
+        text-align: center;
+    }
+
+    #footer-header-text {
+        margin-bottom: 8px;
+    }
+
+    #footer-repository-text {
+        margin-top: 16px;
+        margin-bottom: 8px;
+    }
+}
+
+@media screen and (max-width: 1265px) {
+    body {
+        font-size: 1em;
+    }
+
+    #subtitle-seperator {    
+        margin-top: 6px;
+        margin-bottom: 12px;
+    }
+}
+
+@media screen and (max-width: 854px) {
+    .grid-item {
+        width: calc(50% - 10px);
+    }
+}
+
+@media screen and (max-width: 510px) {
+    h1 {
+        font-size: 2.5em;
+    }
+
+    h2 {
+        font-size: 1.25em;
+    }
+
+    #subtitle-seperator {    
+        margin-top: 8px;
+        margin-bottom: 13px;
+    }
+}
+
+@media screen and (max-width: 500px) {
+    .grid-item {
+        width: calc(100% - 10px);
+    }
+}
+
+@media screen and (max-width: 430px) {
+    h1 {
+        font-size: 2em;
+    }
+
+    #subtitle-seperator {    
+        margin-top: 10px;
+    }
 }
