--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
 }
 
 body {
-    background-color: #9d88d3;
+    background-color: #000000;
     font-family: 'Roboto', sans-serif;
     font-size: 1.5em;
     color: white;
